# TokenFlux

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_tokenizer.py  xmake.lua
.github/workflows/: release.yml
benchmarks/: BENCHMARK_RESULTS_2026-03-01.md  render_thread_chart.py  tokenfluxpp_vs_tiktoken.py  tokenfluxpp_vs_tiktoken_vs_tokenizer.py
cli/: main.cpp
examples/: main.cpp
include/tokenflux/: byte_level_bpe_trainer.hpp  corpus_reader.hpp  formats.hpp  pretokenize.hpp  pretokenizer.hpp  stream.hpp  (+2 more)
python/: bindings.cpp
src/: byte_level_bpe_trainer.cpp  corpus_reader.cpp  formats.cpp  pretokenize.cpp  pretokenizer.cpp  stream.cpp  tokenizer.cpp  trainer.cpp
tests/: smoke.cpp
tokenflux/: __init__.py
tokenizer/: TokenFluxTokenize.cpp  TokenFluxTrain.cpp  byte_bpe_bpe.cpp  byte_bpe_bpe.h  byte_bpe_config.h  byte_bpe_lib.cpp  byte_bpe_lib.h  byte_bpe_train.cpp  input_source.cpp  input_source.hpp  parquet_stream.py  prepare_shards.cpp  test_tokenizer.py  tokenflux_bpe.cpp  tokenflux_bpe.hpp  tokenflux_config.h  tokenflux_config.hpp  tokenflux_lib.cpp  tokenflux_lib.h  tokenflux_lib.hpp  tokenflux_pybind.cpp  tokenize_common.cpp  tokenize_common.hpp  tokenize_pipeline.cpp  tokenize_pipeline.hpp  tokenize_tokenizer.cpp  tokenize_tokenizer.hpp  train_backend.h  train_backend.hpp  train_backend_bpe.cpp  train_backend_byte_bpe.cpp  train_backend_common.cpp  train_backend_common.h  train_backend_common.hpp  train_backend_unigram.cpp  train_backend_wordpiece.cpp  train_frontend.cpp  train_frontend.h  train_frontend.hpp  train_io.cpp  (+7 more)
